--- a/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
@@ -1,29 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:background="@drawable/bakgrund"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is fragment 1"
-        android:textSize="30dp"
-        android:layout_gravity="center"
-        android:layout_margin="20dp"/>
+    <FrameLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textViewStep"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Social"
+            android:textSize="30sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:textColor="#ffffff"
+            android:id="@+id/textView14" />
+    </FrameLayout>
 
-    <com.hrules.horizontalnumberpicker.HorizontalNumberPicker
-        android:layout_width="168dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/view"
-        android:layout_gravity="right"
-        android:layout_weight="0.10" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="My groups"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/textView17" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/reminders"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Football"
+                android:textStyle="bold"
+                android:layout_marginRight="0dp"
+                android:layout_marginLeft="0dp"
+                android:background="@drawable/mybutton"
+                android:textColor="#157065"
+                android:textSize="20dp" />
+
+            <Button
+                android:id="@+id/change_passcode"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Study group"
+                android:textStyle="bold"
+                android:layout_marginRight="0dp"
+                android:layout_marginLeft="0dp"
+                android:background="@drawable/mybutton"
+                android:textColor="#157065"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Requests"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/textView18" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/change_passcode"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Family (Jan)"
+                android:textStyle="bold"
+                android:layout_marginRight="0dp"
+                android:layout_marginLeft="0dp"
+                android:background="@drawable/mybutton"
+                android:textColor="#157065"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create group"
+                android:id="@+id/button3"
+                android:padding="15dp"
+                android:textSize="20dp"
+                android:textColor="#167165"
+                android:background="@drawable/mybutton"
+                android:layout_gravity="center_horizontal|bottom"
+                android:layout_marginBottom="50sp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
