--- a/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment1.xml
@@ -24,9 +24,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:id="@+id/scrollView2"
-        android:layout_weight="0.83">
+        android:layout_height="276dp"
+        android:id="@+id/scrollView2">
 
         <LinearLayout
             android:orientation="vertical"
@@ -174,6 +173,11 @@
                         android:textSize="15dp" />
                 </RadioGroup>
             </RelativeLayout>
+
+            <ExpandableListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/expandableListView2" />
 
         </LinearLayout>
     </ScrollView>
