--- a/SlidingMenuExample/app/src/main/res/layout/create_user.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/create_user.xml
@@ -18,13 +18,15 @@
         android:layout_alignRight="@+id/textView7"
         android:layout_alignEnd="@+id/textView7"
         android:textColor="#ffffff"
-        android:layout_margin="15dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp" />
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -118,6 +120,41 @@
                 android:textSize="15dp"
                 android:layout_marginLeft="25dp" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBox"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:buttonTint="#ffffff"
+                    android:textColor="#ffffff"
+                    android:checked="false"
+                    android:layout_marginRight="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/terms"
+                    android:id="@+id/textView5"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="18dp"
+                    android:layout_toRightOf="@+id/checkBox"
+                    android:layout_toEndOf="@+id/checkBox"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#ffffff"
+                    android:onClick="onButtonClick" />
+
+            </RelativeLayout>
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -132,15 +169,10 @@
                 android:layout_below="@+id/textconfirmpassword"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
-                android:layout_marginBottom="20dp" />
+                android:layout_marginBottom="40dp" />
+
         </LinearLayout>
     </ScrollView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView5" />
 
 </LinearLayout>
 
