--- a/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
@@ -9,7 +9,7 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/logga3"
         android:id="@+id/imageView7"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,11 +24,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using &apos;Content here, content here&apos;, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for &apos;lorem ipsum&apos; will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)."
+        android:text="@string/about_us"
         android:id="@+id/textView4"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:textColor="#ffffff" />
 
