--- a/SlidingMenuExample/app/src/main/res/layout/add_member.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_member.xml
@@ -4,4 +4,86 @@
     android:background="@drawable/bakgrund"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add member to group XXX"
+            android:textSize="30sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:textColor="#ffffff"
+            android:id="@+id/textView10" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp">
+
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="0.27">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Username"
+                android:id="@+id/textView12"
+                android:textSize="25dp"
+                android:layout_marginLeft="25dp"
+                android:textColor="#ffffff" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:id="@+id/add_variable"
+                android:hint="Enter name here"
+                android:textSize="20dp"
+                android:textColorHint="#ffffff"
+                android:backgroundTint="@android:color/white"
+                android:layout_gravity="center_horizontal|right"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/textView12"
+                android:layout_toEndOf="@+id/textView12" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="15dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add member"
+                android:id="@+id/button3"
+                android:padding="15dp"
+                android:textSize="20sp"
+                android:textColor="#167165"
+                android:background="@drawable/mybutton"
+                android:onClick="onButtonClick"
+                android:layout_marginBottom="50sp"
+                android:layout_weight="0"
+                android:layout_gravity="bottom|center"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
 </LinearLayout>
