--- a/SlidingMenuExample/app/src/main/res/layout/create_group.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/create_group.xml
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:id="@+id/add_variable"
+                android:id="@+id/add_group"
                 android:hint="Enter name here"
                 android:textSize="20dp"
                 android:textColorHint="#ffffff"
@@ -56,7 +56,8 @@
                 android:layout_gravity="center_horizontal|right"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/textView12"
-                android:layout_toEndOf="@+id/textView12" />
+                android:layout_toEndOf="@+id/textView12"
+                android:maxLength="15" />
         </RelativeLayout>
 
         <RelativeLayout
