--- a/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
@@ -4,133 +4,110 @@
     android:background="@drawable/bakgrund"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Social"
-            android:textSize="30sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="20dp"
-            android:textColor="#ffffff"
-            android:id="@+id/textView14" />
-    </FrameLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="My groups"
-                android:textColor="#ffffff"
-                android:textSize="20dp"
-                android:layout_marginLeft="20dp"
-                android:id="@+id/textView17" />
-        </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/reminders"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Football"
-                android:textStyle="bold"
-                android:layout_marginRight="0dp"
-                android:layout_marginLeft="0dp"
-                android:background="@drawable/mybutton"
-                android:textColor="#157065"
-                android:textSize="20dp" />
-
-            <Button
-                android:id="@+id/change_passcode"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="Study group"
-                android:textStyle="bold"
-                android:layout_marginRight="0dp"
-                android:layout_marginLeft="0dp"
-                android:background="@drawable/mybutton"
-                android:textColor="#157065"
-                android:textSize="20dp" />
-        </LinearLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Requests"
-                android:textColor="#ffffff"
-                android:textSize="20dp"
-                android:layout_marginLeft="20dp"
-                android:id="@+id/textView18" />
-        </FrameLayout>
+        android:id="@+id/scrollView4" >
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
 
-            <Button
-                android:id="@+id/change_passcode"
-                style="?android:textAppearanceSmall"
+            <FrameLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Social"
+                    android:textSize="30sp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="20dp"
+                    android:textColor="#ffffff"
+                    android:id="@+id/textView14" />
+            </FrameLayout>
+
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Family (Jan)"
-                android:textStyle="bold"
-                android:layout_marginRight="0dp"
-                android:layout_marginLeft="0dp"
-                android:background="@drawable/mybutton"
-                android:textColor="#157065"
-                android:textSize="20sp" />
-        </LinearLayout>
+                android:layout_marginTop="0dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="My groups"
+                    android:textColor="#ffffff"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/textView18"
+                    android:layout_marginBottom="10dp" />
+            </FrameLayout>
 
-            <Button
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/groups_layout">
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create group"
-                android:id="@+id/button3"
-                android:padding="15dp"
-                android:textSize="20dp"
-                android:textColor="#167165"
-                android:background="@drawable/mybutton"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginBottom="50sp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
-        </RelativeLayout>
+                android:layout_marginTop="30dp">
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Requests"
+                    android:textColor="#ffffff"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/textView20"
+                    android:layout_marginBottom="10dp" />
+            </FrameLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/requests"
+                android:layout_marginBottom="30dp"></LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="127dp"
+                android:layout_marginTop="20dp">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Create group"
+                    android:id="@+id/button3"
+                    android:padding="15dp"
+                    android:textSize="20dp"
+                    android:textColor="#167165"
+                    android:background="@drawable/mybutton"
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="50dp" />
+            </RelativeLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
