--- a/SlidingMenuExample/app/src/main/res/layout/horizontal_number_picker.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/horizontal_number_picker.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 <com.hrules.horizontalnumberpicker.HorizontalNumberPicker
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
+    android:layout_width="50dp"
     android:layout_height="50dp"
     android:id="@+id/numberPicker"
-    android:textColor="#ffffff"
-    android:textSize="22sp"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true"
-    android:layout_marginRight="0dp"
-    android:layout_alignParentBottom="true"
+
+
      />
+</LinearLayout>
