--- a/SlidingMenuExample/app/src/main/res/layout/add_values.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_values.xml
@@ -32,12 +32,14 @@
             android:layout_height="200dp"
             android:baselineAligned="false"
             android:id="@+id/table_layout"
-            android:stretchColumns="1"
+            android:stretchColumns="0"
+
             >
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                >
 
             </TableRow>
         </TableLayout>
@@ -63,6 +65,7 @@
                 android:textSize="20sp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/submit_button2"
                 android:id="@+id/skip_button2"
@@ -80,6 +83,7 @@
                 android:textSize="15sp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/submit_button2"
                 android:layout_toEndOf="@+id/submit_button2" />
@@ -98,6 +102,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginTop="5dp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
 
