--- a/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment4.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@drawable/bakgrund"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bakgrund">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"></LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -78,7 +84,10 @@
                     android:layout_marginLeft="20dp"
                     android:id="@+id/textView20"
                     android:layout_marginBottom="10dp" />
+
             </FrameLayout>
+
+
 
             <LinearLayout
                 android:orientation="vertical"
