--- a/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:id="@+id/imageView4"
-                android:src="@drawable/logga3"
+                android:src="@drawable/finaltextlogga"
                 android:layout_marginTop="40dp"
                 android:layout_gravity="center_horizontal" />
 
