--- a/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/fragment6.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@drawable/bakgrund"
     android:layout_height="match_parent">
 
     <ScrollView
@@ -46,7 +45,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/logga3"
+                android:src="@drawable/finaltextlogga"
                 android:id="@+id/imageView7"
                 android:layout_below="@+id/scrollView6"
                 android:layout_centerHorizontal="true"
