--- a/SlidingMenuExample/app/src/main/res/values/colors.xml
+++ b/SlidingMenuExample/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="colorAccentCheckBox">#f8f8f8</color>
     <color name="colorUncheckedBox">#014f01</color>
     <color name="apptheme_color">#476903</color>
-    <color name="divider_white">#ffffff</color>
+    <color name="divider_white">#00ffffff</color>
 </resources>
