--- a/SlidingMenuExample/app/src/main/res/values/tags.xml
+++ b/SlidingMenuExample/app/src/main/res/values/tags.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name ="TAG_NAME" type="id"/>
     <item name= "TAG_ID" type = "id"/>
+    <item name = "STAT_TAG" type = "id"/>
 </resources>
