--- a/SlidingMenuExample/app/src/main/res/layout/add_variable.xml
+++ b/SlidingMenuExample/app/src/main/res/layout/add_variable.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add variable"
+            android:text="Add Activity"
             android:textSize="30sp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="20dp"
@@ -35,6 +35,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
+                android:id="@+id/relativeLayoutAddVariable"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
 
@@ -56,7 +57,7 @@
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/add_variable"
-                    android:hint="Enter variable name here"
+                    android:hint="Enter activity name"
                     android:textSize="20dp"
                     android:textColorHint="#ffffff"
                     android:backgroundTint="@android:color/white"
